# trading-system

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: calendar.csv  settings.yaml  strategies.yaml
docs/: SPEC.md
src/tsys/: __init__.py
src/tsys/adapters/: __init__.py  clock.py
src/tsys/adapters/backtest/: __init__.py  engine_adapter.py
src/tsys/adapters/brokers/: __init__.py  live_stub.py  paper.py
src/tsys/adapters/calendar/: __init__.py  csv_source.py
src/tsys/adapters/feeds/: __init__.py  ccxt_feed.py  ccxt_history.py  normalize.py  oanda_feed.py  oanda_history.py  reconnect.py  replay_feed.py  twelvedata_feed.py  twelvedata_history.py
src/tsys/adapters/notify/: __init__.py  log_notifier.py  telegram_notifier.py
src/tsys/adapters/persistence/: __init__.py  parquet_store.py  schema.sql  sqlite_repo.py
src/tsys/application/: __init__.py  bus.py  dto.py  ports.py  risk_manager.py
src/tsys/application/use_cases/: __init__.py  circuit_breakers.py  daily_report.py  download_history.py  import_calendar.py  period_report.py  replay_session.py  run_backtest.py  run_walkforward.py  stream_and_trade.py  validate.py
src/tsys/domain/: __init__.py  costs.py  entities.py  exceptions.py  execution.py  indicators.py  regime.py  risk.py  sizing.py  values.py
src/tsys/domain/strategies/: __init__.py  base.py  baselines.py  meanrev.py  momentum.py  quiet_scalper.py  streaming.py
src/tsys/frameworks/: __init__.py  config.py  logging_setup.py  registry.py  reporting.py
src/tsys/frameworks/entrypoints/: __init__.py  main_backtest.py  main_download.py  main_paper.py  main_report.py  main_walkforward.py
systemd/: tsys-paper.service  tsys-report.service  tsys-report.timer
tests/adapters/: __init__.py  test_backtest_engine.py  test_ccxt_history.py  test_csv_calendar.py  test_guardrails.py  test_normalize.py  test_paper_broker.py  test_parquet_store.py  test_reconnect.py  test_sqlite_m6.py  test_sqlite_repo.py  test_twelvedata_history.py
tests/application/: __init__.py  test_bus.py  test_download_history.py  test_import_calendar.py  test_period_report.py  test_risk_manager.py  test_run_backtest.py  test_validate.py
tests/domain/: __init__.py  test_costs.py  test_indicators.py  test_regime.py  test_risk.py  test_sizing.py  test_strategies.py  test_streaming.py  test_values_entities.py
tests/e2e/: __init__.py  test_paper_engine.py
tests/frameworks/: __init__.py  test_config.py
