# Placeholder project metadata — dependencies pinned in M0. See docs/SPEC.md Part B1.
[project]
name = "tsys"
version = "0.0.0"
description = "Event-driven, paper-trading-first multi-market trading system."
requires-python = ">=3.11"
dependencies = [
    # Pinned in M0. Core: numpy, pandas, pyarrow, ccxt, pydantic, aiosqlite,
    # structlog, uvloop; backtest lib (vectorbt OR backtesting.py) chosen in M3.
]

[project.optional-dependencies]
dev = [
    # pytest, pytest-asyncio, import-linter, mypy, ruff — pinned in M0.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsys"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
# Part B5: mypy --strict on domain + application at minimum.
